--- a/6.4 Motivation Meme Project/index.html
+++ b/6.4 Motivation Meme Project/index.html
@@ -14,3 +14,21 @@ But it must have the following features:
 6. Read about the text-transform property on MDN docs to make the h1 uppercase with CSS.
   https://developer.mozilla.org/en-US/docs/Web/CSS/text-transform 
 -->
+  <!DOCTYPE html>
+  <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>poster</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body><div class="onepiece">
+    <img class="photo" src="one-piece.jpg" alt="onepiece crew members">
+    <h1>The best anime</h1>
+    <p>i love watching one piece cause -this anime hits different.</p>
+  </div>
+  </body>
+  </html>
