--- a/6.6 image Gallary/index.html
+++ b/6.6 image Gallary/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="heading">Arrancar are Hollows that have removed their masks in an effort to acquire the powers of both Hollows and Shinigami. They are few in number, and still fewer ever fully developed their powers.</div>
     <div class="gallary" >
         <ul class="cards">
             <li><img src="yug.jpeg">Halibel</li>
